# snap-rules

./: .gitignore  snap-rules.cabal
.stack-work/install/x86_64-linux/lts-6.4/7.10.3/flag-cache/: aeson-0.11.2.0-204cae73d8cb32ea8d11f842948bcaac  aeson-pretty-0.7.2-ee412cd4f1f61a1d196f0e8daadf4776  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  appar-0.1.4-49c6ef6e14982c7422c400172aa14b53  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-73dc304e4aedd154fee5949d3e88b433  auto-update-0.1.4-26185380f9814bfda0946e559c9342a7  base-compat-0.9.1-88d2eb460760f8335257e69c0f87aa82  base64-bytestring-1.0.0.1-7a1d6278262346143ad180321424ea8b  blank-canvas-0.6-0eb7d46cd74ecdaf3774054337dcf8a9  blaze-builder-0.4.0.2-efcd427769ccee59ed2ad8bb5ef5db7a  byteorder-1.0.4-668610de9ca60d9ba78b7a66682229b4  bytestring-builder-0.10.6.0.0-8aa4073730c676dbe210ea8bffd8d092  case-insensitive-1.2.0.6-1e785ad7ea03fd7882502f10fd07e5a2  cmdargs-0.10.14-faa0a33022db697842edf726eec09651  colour-2.3.3-0c4e3735159b357562a94a22fd309019  cookie-0.4.2-8dddd62bc222e3e80e77fec5762373fc  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  easy-file-0.2.1-9b22ae8f4cbee2da82c99a0d82e5050c  exceptions-0.8.2.1-08ed62d2282590eb80eba3e5c42a5f4e  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  fast-logger-2.4.6-b9d88db43baaf071ed2aec8d8d041f75  generic-deriving-1.10.5-14ee8748c50b3a89c9f09e216eb732c5  hashable-1.2.4.0-eb8410705fa05638eebff0131e5dac80  hex-0.1.2-d00f05dfb49a06b2f5fd408a1282979f  (+47 more)
src/: Main.hs
(+1 files in other folders)
