name:                snap-rules
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hhefesto/snap-rules#readme
license:             BSD3
license-file:        LICENSE
author:              hefesto
maintainer:          daniel.herrera.rendon@gmail.com
copyright:           GPL
category:            Something
build-type:          Simple
cabal-version:       >=1.10

executable snap-rules
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       blank-canvas
